classDiagram
    class AppUser {
      Long id
      String name
      String email
    }
    class Vehicle {
      Long id
      int productionYear
      int currentMileage
      updateMileage()
    }
    class VehicleVariant {
      Long id
      String make
      String model
      String generation
      String engineLabel
      VehiclePriceClass priceClass
    }
    class WorkDefinition {
      Long id
      String code
      String name
      WorkCategory category
      CatalogCategory catalogCategory
      Integer intervalKm
      Integer intervalMonths
    }
    class WorkPriceRange {
      VehiclePriceClass priceClass
      BigDecimal minPrice
      BigDecimal maxPrice
    }
    class ServiceRecord {
      Long id
      LocalDate serviceDate
      int mileage
      String note
    }
    class ServiceItem {
      BigDecimal actualPrice
    }
    class Problem {
      String description
      ProblemCategory category
      ProblemStatus status
      LocalDateTime createdAt
      close()
      resolve()
    }

    AppUser "1" --> "1..*" Vehicle : owns
    AppUser --> Vehicle : activeVehicle
    Vehicle "*" --> "1" VehicleVariant
    Vehicle "1" --> "0..*" ServiceRecord
    ServiceRecord "1" *-- "1..*" ServiceItem
    ServiceItem "*" --> "1" WorkDefinition
    WorkDefinition "1" --> "5" WorkPriceRange
    Vehicle "1" --> "0..*" Problem
    Problem "0..*" --> "0..1" ServiceRecord : resolvedBy
